# 2KyrsLABA5

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
black_box/: Application.cpp  PainterImpl.h  View.h
src/: Ball.cpp  Ball.hpp  Color.cpp  Color.h  Painter.cpp  Painter.h  Physics.cpp  Physics.h  Point.h  Velocity.h  World.cpp  World.h  dust.cpp  dust.h  main.cpp
